--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Unit Converter</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="google-site-verification" content="-wEVuTLV7qsftr0JuURg4OTO2-mO6ScvFXv6ulDO9yA" />
 </head>
 <body>
     <header>
